--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,9 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: "Google Sans",Roboto,Arial,sans-serif;
+
 }
 .header-main{
     display: flex;
